--- a/notebooks/en/fine_tuning_vlm_trl.ipynb
+++ b/notebooks/en/fine_tuning_vlm_trl.ipynb
@@ -3,14 +3,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/umairinayat/plant-disease-prediction-cnn-deep-leanring/blob/main/notebooks/en/fine_tuning_vlm_trl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vKadZFQ2IdJb"
       },
       "source": [
         "# Fine-Tuning a Vision Language Model (Qwen2-VL-7B) with the Hugging Face Ecosystem (TRL)\n",
         "\n",
         "\n",
-        "\n",
-        "_Authored by: [Sergio Paniego](https://github.com/sergiopaniego)_\n",
         "\n"
       ]
     },
@@ -2211,7 +2219,8 @@
     "colab": {
       "gpuType": "A100",
       "machine_shape": "hm",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
